# batchmp3

./: .gitignore  Makefile.am  Makefile.in  README.md  config.h  config.h.in  configure  configure.ac  main.cpp
batchmp3.xcodeproj/: project.pbxproj
batchmp3.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
lame-3.99.5/vc_solution/: arch_nasm.props  arch_sse2.props  arch_x87.props  vc14_libmp3lame.vcxproj  vc14_libmp3lame.vcxproj.filters  vc14_mpglib.vcxproj  vc14_mpglib.vcxproj.filters  vc9_lame_config.props
pthreads/: pthreads.vcxproj  pthreads.vcxproj.filters  ptw32_OLL_lock.c
src/: Encoder.cpp  Encoder.h  Makefile.am  Makefile.in  WavReader.cpp  WavReader.h  WavReader.hpp  filesystem-win32.cpp  filesystem.cpp  filesystem.h  main.cpp  util.cpp  util.h
win/: batchmp3.sln  batchmp3.vcxproj  batchmp3.vcxproj.filters
